# forget

./: .gitignore  AGENTS.md  CLAUDE.md  debug.sh  exp.sh  exp_bars.sh  exp_conf.sh  experiments.md  pyproject.toml  readme.md
.github/: copilot-instructions.md
api/: __init__.py  instructor.py
configs/: experiments.yml
datasets/: concepts.ipynb  inhouse_concepts.ipynb  rwku.ipynb
debug/: README.md  boundary_vector_experiment.py  logit_lens_probe.py  oracle_refuse_prompt.py  phi_token_debug.py  store_vector_sweep.py
doc/: api.rst  conf.py  config.md  design.md  index.md  method.tex  requirements.txt  results.md  troubleshooting.md
docs/: method.tex
ds/: axbench_concept10.ipynb  axbench_concept500.ipynb  conceptvectors.ipynb  inhouse.ipynb  mmlu.ipynb  rwku.ipynb
forget/: __init__.py  chat.py  sanity.ipynb
inference/: README.md  Untitled-1.ipynb  Untitled-4.ipynb  Untitled-7.ipynb  figure1_paper.ipynb  figure_inference_final.ipynb  manifold_bars.ipynb  semantic_similarity_analysis.ipynb
judge/: __init__.py  judge.py  prompts.py
llm/: __init__.py  chat_templates.py  gpu.py  model.py
logs/: gh_screen.txt
notebooks/: llama.ipynb  llama2.ipynb  llama3.ipynb  llama3_presidents.ipynb  llama3_presidents_open.ipynb  llama3_wild.ipynb  llama3_wild_all_pos.ipynb  llama3_wild_imp.ipynb  llama3_wild_improvements.ipynb  llama3_wild_old.ipynb  presidents.ipynb  steering_sanity.ipynb  tofu.ipynb  utils.py  wild.ipynb
notebooks_experiments/: fgd.ipynb  llama3_presidents_good_bad.ipynb  llama3_presidents_open.ipynb  llama3_tofu.ipynb  llama3_wild_all_pos.ipynb  (+6 more)
(+770 files in other folders)
